refactor: SoptampUser DTO 분리 (#332)